<resources>
    <string name="app_name">BookinglaneAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember</string>
    <string name="logout"><u>Logout</u></string>
    <string name="storlet_car_rental">Storlet car rental</string>
    <string name="fleet_120">Fleet: 120</string>
    <string name="earnings">Earnings</string>
    <string name="your_fleet">Your fleet</string>
    <string name="your_drivers">Your drivers</string>
    <string name="trip_history">Trip history</string>
    <string name="driver_trace">Driver trace</string>
    <string name="reservation_pro_subs"><![CDATA[Reservation & Pro subs]]></string>
    <string name="upcoming_trip">Upcoming trip</string>
    <string name="from_asanbay_21">From: Asanbai 21</string>
    <string name="to_Osipenko">To: Osipenko 113</string>
    <string name="people_8">People: 8</string>
    <string name="time">15/08/2019 15:00</string>
    <string name="limousine">Limousine</string>
    <string name="time_of_receipt_24_00">Time of receipt: 24:00</string>
    <string name="statistics">Statistics</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="bus">Bus</string>
    <string name="limo">Limo</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="capacity">Capacity</string>
    <string name="refusal_price">Refuslal Price</string>
    <string name="free_denial_days">Free denial days</string>
    <string name="price_per_hour">Price per hour</string>
    <string name="price_per_min">Price per  min</string>
    <string name="price_per_mile">Price per mile</string>
    <string name="price_per_point">Price per point</string>
    <string name="photo">Photo</string>
    <string name="recommendation">We strongly recommend using professionally captured photographs of machines in order to receive more orders.</string>
    <string name="add_car">Add car</string>
    <string name="edit_car">Edit car</string>
    <string name="add_driver">Add driver</string>
    <string name="car_details">Car details</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="phone_number">Phone number</string>
    <string name="driver_s_licence">Driver\'s licence</string>
    <string name="pid">PID:</string>
    <string name="address_t">Address</string>
    <string name="end_of_date">End of date</string>
    <string name="save">Save</string>
    <string name="login_username">Login: username</string>
    <string name="send_username_and_password_to_the_driver">Send username and password to the driver</string>
    <string name="all">All</string>
    <string name="come">Come</string>
    <string name="perform">Perform</string>
    <string name="canceled">Canceled</string>
    <string name="history">History</string>
    <string name="reservation_details">Reservation details</string>
    <string name="try_pro_1_month_free">Try pro 1-month free</string>
    <string name="driver">Driver</string>
    <string name="trip_route">Trip route</string>
    <string name="order_details">Order Details</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="company_profile">Company profile</string>
    <string name="bank_account_9379992545785895">Bank account: 9379992545785895</string>
    <string name="email_username_mail_com">Email: username@mail.com</string>
    <string name="phone_1_000_000_0000">Phone: +1 (000) 000 - 0000</string>
    <string name="address_2099_walnut_hill_ln_lafayette_california_55262">Address: 2099 Walnut Hill Ln Lafayette, California 55262</string>
    <string name="email">Email</string>
    <string name="bank_account">Bank account</string>
    <string name="edit_company_profile">Edit company profile</string>
    <string name="company_name">Company name</string>

</resources>
