<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_bg_black"
    android:orientation="vertical"
    android:paddingTop="?actionBarSize"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/text_company_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_profile"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/image_holder_rl_main"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_below="@id/text_company_profile"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:gravity="center">

        <ImageView
            android:id="@+id/company_icon_iv_company_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="false"
            android:src="@drawable/company" />

    </LinearLayout>

    <TextView
        android:id="@+id/company_name_tv_company_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_holder_rl_main"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/image_holder_rl_main"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/storlet_car_rental"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/company_name_et_company_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_holder_rl_main"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/image_holder_rl_main"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:hint="@string/company_name"
        android:textColorHint="@color/white"
        android:text="@string/storlet_car_rental"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/fleet_number_tv_company_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_name_tv_company_profile"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/image_holder_rl_main"
        android:text="@string/fleet_120"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <com.willy.ratingbar.BaseRatingBar

        android:id="@+id/rating_bar_company_profile"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/fleet_number_tv_company_profile"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/image_holder_rl_main"
        app:srb_clearRatingEnabled="false"
        app:srb_clickable="false"
        app:srb_drawableEmpty="@drawable/ic_star_inactive"
        app:srb_drawableFilled="@drawable/ic_star_yellow"
        app:srb_isIndicator="true"
        app:srb_minimumStars="1"
        app:srb_numStars="5"
        app:srb_rating="2"
        app:srb_starPadding="1dp"
        app:srb_stepSize="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_holder_rl_main"
        android:layout_marginTop="8dp"
        android:background="@drawable/add_vehicle_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address_tv_company_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/address_2099_walnut_hill_ln_lafayette_california_55262"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/phone_tv_company_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/phone_1_000_000_0000"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/email_tv_company_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_username_mail_com"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bank_account_tv_company_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/bank_account_9379992545785895"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/address_et_company_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_t"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/phone_number_et_company_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/email_et_company_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/bank_account_et_company_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_account"
            android:textColor="@color/white"
            android:paddingBottom="16dp"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_car_add_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/btn_glow_iv_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/button_glow_bg"
            app:layout_constraintBottom_toBottomOf="parent">

        </ImageView>

        <Button
            android:id="@+id/edit_btn_company_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/gradient_btn"
            android:text="@string/edit_company_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_glow_iv_registration"
            app:layout_constraintEnd_toEndOf="@id/btn_glow_iv_registration"
            app:layout_constraintStart_toStartOf="@id/btn_glow_iv_registration"
            app:layout_constraintTop_toTopOf="@id/btn_glow_iv_registration" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
